@@ -1,11 +1,25 @@
 # Changelog
 
-<!-- PLACEHOLDER -- to be updated with each release -->
-
 All notable changes to this project will be documented in this file.
 
 The format is based on [Keep a Changelog](https://keepachangelog.com/).
 
 ## [Unreleased]
 
-No changes recorded yet.
+## [v0.1.0] - 2026-03-25
+
+### Added
+- **Platform Core (MR !25):** Server session handling (`Session.java`) with login, registration, chat, and game list request processing. Client-side `Network` rewritten as threaded socket client with login, chat, and game list methods. `ChatRegistry` and `Message` model for in-game chat. `GameType` enum, `LeaderboardDatabase`, and `MatchRecord` for leaderboard persistence. `uuid-creator` dependency added to root `pom.xml`; `sqlite-jdbc` added to `server/pom.xml`.
+- **Rules & Validation (MR !27):** `TicTacToeBoard` with 3x3 board, cell validation, and database serialization (`toString`/`fromString`). `TicTacToeGame` with move placement, validation, and win condition checking. `GameEngine` interface, `GameController`, `GameState` enum, and supporting classes (`Move`, `Player`, `GeneralStats`).
+- **Client/UI (MR !24):** Create Account and Game Over screens with controllers and FXML. Back buttons on all screens. Log Out button on main page. CSS theme (`style.css`) applied across all pages. Menu bar with Change Log, Info, and Admin Control sections. Search bar on main page.
+
+### Changed
+- **Platform Core (MR !25):** `Game.java` rewritten with parameterized constructor and `final` fields. `Tag.java` rewritten with constructor, `colour` renamed to `color`, `id` field removed. `LaunchConfigs.java` rewritten with constructor. `GameRegistry.unregister()` method removed. `Database.java` and `Network.java` moved from `core/persistence/` to `server/` module. `LeaderboardEntry` updated with `wins`/`matches` fields replacing `score`.
+- **Client/UI (MR !24):** `MainApp.java` window title changed from "Welcome Page" to "Welcome!". All FXML layouts updated with new color scheme and Dubai font family.
+- **Integration:** Enabled `--enable-native-access=javafx.graphics` in `pom.xml` to suppress JDK 25 warnings.
+
+### Removed
+- **Platform Core (MR !25):** `GameDTO.java` and `shared/models/Player.java` deleted (replaced by direct `Game` getters and `games/Player.java` respectively).
+
+### Fixed
+- **Integration:** Fixed `Network.getGames()` calling `Game` constructor with wrong argument types. Fixed incorrect `main.java.ca.ucalgary.seng300.games` package declarations in 6 game files. Removed duplicate `LeaderboardEntry` stub from `shared/models/`.
